adjusted new functionality

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -899,7 +899,11 @@
     "    print(f'DATAFRAME: {df_names[i]}\\n  COLUMNS: {\", \".join(sorted(df.columns.tolist()))}\\n')\n",
     "    \n",
     "for i,df in enumerate(df_collection):\n",
-    "    df.to_csv(f'data/{df_names[i]}.csv', index = False)\n",
+    "    try:\n",
+    "        df.to_csv(f'data/{df_names[i]}.csv', index = False)\n",
+    "    except:\n",
+    "        print(\"Data directory is not present - skipping save\")\n",
+    "        \n",
     "    print('\\n############# NEW DATAFRAME ################')\n",
     "    print('Displaying column value counts where there are fewer than 10 unique values in the column.')\n",
     "    print(f'\\n---  DataFrame: {df_names[i]} ---------------------')\n",
