--- a/jeds_visualizations.ipynb
+++ b/jeds_visualizations.ipynb
@@ -20,7 +20,57 @@
     }
    ],
    "source": [
-    "from utils import explain # Helper for clarifying dataframe information"
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import plotly.express as px\n",
+    "\n",
+    "from utils import explain"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "443d7572-3ac4-41e8-b151-d574e7032bcd",
+   "metadata": {},
+   "source": [
+    "#### Create Dataframes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fe0d157-f745-46c8-8485-8b968ca6372d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "aa6decaf-4a08-45f9-b00d-76ec5248ca49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Blank Input returns all information.\n",
+      "Which dataframe are you asking about? (partial and complete matches returned) >>  safdas\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No matches found.\n",
+      "\n",
+      "Some of the possibilities are:\n",
+      "grouped_tables, possible_merge_options, common_vars, comp_sum_df, bus_char_df, bus_own_df, bus_tech_df, slbo \n"
+     ]
+    }
+   ],
+   "source": [
+    "explain.what_is()\n"
    ]
   },
   {
@@ -142,8 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.express as px\n",
-    "import numpy as np\n",
+    "\n",
     "\n",
     "fig = px.bar(accom_subset, x = 'ratio', y = 'reason', color = 'importance',\n",
     "            width = 1000, height = 600, orientation = 'h', title = picked_industry,\n",
