--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -1330,6 +1330,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "6f7c959a-68b8-461f-8386-a5944abbdbb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Percent of sales, value of shipments, or revenue of employer firms (%)'"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped_tables.iloc[31]['Tech Labels']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d1876b68-a71a-4db2-8f22-3f4e32090234",
    "metadata": {
@@ -1341,7 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 52,
    "id": "c5ba33c4-e741-4ac6-a29c-24627bce46bd",
    "metadata": {},
    "outputs": [],
@@ -1361,7 +1382,7 @@
     "    'FIRMPDEMP',\n",
     "    'OWNCHAR',\n",
     "    'TECHUSE',\n",
-    "    'RPCDEMPT',\n",
+    "    'RCPPDEMP',\n",
     "    'PAYANN',\n",
     "    'EMP'\n",
     "]\n",
@@ -1379,20 +1400,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 56,
    "id": "5ad0e9b9-b4c8-42d4-ac89-5170e2f3edd3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{0: 'NAME,EMP,FIRMPDEMP,GEO_ID,NAICS2017,NAICS2017_LABEL,PAYANN,RACE_GROUP,RACE_GROUP_LABEL,SEX,SEX_LABEL,YIBSZFI,YIBSZFI_LABEL',\n",
-       " 1: 'NAME,BUSCHAR,BUSCHAR_LABEL,EMP,FIRMPDEMP,GEO_ID,NAICS2017,NAICS2017_LABEL,PAYANN,QDESC,QDESC_LABEL,RACE_GROUP,RACE_GROUP_LABEL,SEX,SEX_LABEL,YIBSZFI,YIBSZFI_LABEL',\n",
+       "{0: 'NAME,EMP,FIRMPDEMP,GEO_ID,NAICS2017,NAICS2017_LABEL,PAYANN,RACE_GROUP,RACE_GROUP_LABEL,RCPPDEMP,SEX,SEX_LABEL,YIBSZFI,YIBSZFI_LABEL',\n",
+       " 1: 'NAME,BUSCHAR,BUSCHAR_LABEL,EMP,FIRMPDEMP,GEO_ID,NAICS2017,NAICS2017_LABEL,PAYANN,QDESC,QDESC_LABEL,RACE_GROUP,RACE_GROUP_LABEL,RCPPDEMP,SEX,SEX_LABEL,YIBSZFI,YIBSZFI_LABEL',\n",
        " 2: 'NAME,GEO_ID,NAICS2017,NAICS2017_LABEL,OWNCHAR,OWNCHAR_LABEL,OWNPDEMP,QDESC,QDESC_LABEL,OWNER_RACE,OWNER_RACE_LABEL,OWNER_SEX,OWNER_SEX_LABEL',\n",
-       " 3: 'NAME,EMP,FIRMPDEMP,GEO_ID,NAICS2017,NAICS2017_LABEL,NSFSZFI,NSFSZFI_LABEL,PAYANN,RACE_GROUP,RACE_GROUP_LABEL,SEX,SEX_LABEL,TECHUSE,TECHUSE_LABEL'}"
+       " 3: 'NAME,EMP,FIRMPDEMP,GEO_ID,NAICS2017,NAICS2017_LABEL,NSFSZFI,NSFSZFI_LABEL,PAYANN,RACE_GROUP,RACE_GROUP_LABEL,RCPPDEMP,SEX,SEX_LABEL,TECHUSE,TECHUSE_LABEL'}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,7 +1421,7 @@
    "source": [
     "no_label = [\n",
     "    'OWNPDEMP_LABEL','GEO_ID_LABEL','FIRMPDEMP_LABEL','STATE_LABEL','PAYANN_LABEL',\n",
-    "    'EMP_LABEL',\n",
+    "    'EMP_LABEL','RCPPDEMP_LABEL',\n",
     "]\n",
     "variable_dict = {}\n",
     "for i,label in enumerate(target_subset.columns[1:]):\n",
@@ -1416,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 57,
    "id": "3815b474-ad8c-4636-a450-1aab7828ef18",
    "metadata": {},
    "outputs": [],
@@ -1448,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 58,
    "id": "e1be9681-bae6-49a4-9ce5-26b8fca1c276",
    "metadata": {},
    "outputs": [
@@ -1457,16 +1478,16 @@
      "output_type": "stream",
      "text": [
       "If the operation fails, click the link to see the error.\n",
-      "https://api.census.gov/data/2018/abscs?get=NAME,EMP,FIRMPDEMP,GEO_ID,NAICS2017,NAICS2017_LABEL,PAYANN,RACE_GROUP,RACE_GROUP_LABEL,SEX,SEX_LABEL,YIBSZFI,YIBSZFI_LABEL&for=state:* \n",
+      "https://api.census.gov/data/2018/abscs?get=NAME,EMP,FIRMPDEMP,GEO_ID,NAICS2017,NAICS2017_LABEL,PAYANN,RACE_GROUP,RACE_GROUP_LABEL,RCPPDEMP,SEX,SEX_LABEL,YIBSZFI,YIBSZFI_LABEL&for=state:* \n",
       "\n",
       "If the operation fails, click the link to see the error.\n",
-      "https://api.census.gov/data/2018/abscb?get=NAME,BUSCHAR,BUSCHAR_LABEL,EMP,FIRMPDEMP,GEO_ID,NAICS2017,NAICS2017_LABEL,PAYANN,QDESC,QDESC_LABEL,RACE_GROUP,RACE_GROUP_LABEL,SEX,SEX_LABEL,YIBSZFI,YIBSZFI_LABEL&for=state:* \n",
+      "https://api.census.gov/data/2018/abscb?get=NAME,BUSCHAR,BUSCHAR_LABEL,EMP,FIRMPDEMP,GEO_ID,NAICS2017,NAICS2017_LABEL,PAYANN,QDESC,QDESC_LABEL,RACE_GROUP,RACE_GROUP_LABEL,RCPPDEMP,SEX,SEX_LABEL,YIBSZFI,YIBSZFI_LABEL&for=state:* \n",
       "\n",
       "If the operation fails, click the link to see the error.\n",
       "https://api.census.gov/data/2018/abscbo?get=NAME,GEO_ID,NAICS2017,NAICS2017_LABEL,OWNCHAR,OWNCHAR_LABEL,OWNPDEMP,QDESC,QDESC_LABEL,OWNER_RACE,OWNER_RACE_LABEL,OWNER_SEX,OWNER_SEX_LABEL&for=us:*&for=QDESC_LABEL=YRACQBUS \n",
       "\n",
       "If the operation fails, click the link to see the error.\n",
-      "https://api.census.gov/data/2018/abstcb?get=NAME,EMP,FIRMPDEMP,GEO_ID,NAICS2017,NAICS2017_LABEL,NSFSZFI,NSFSZFI_LABEL,PAYANN,RACE_GROUP,RACE_GROUP_LABEL,SEX,SEX_LABEL,TECHUSE,TECHUSE_LABEL&for=state:* \n",
+      "https://api.census.gov/data/2018/abstcb?get=NAME,EMP,FIRMPDEMP,GEO_ID,NAICS2017,NAICS2017_LABEL,NSFSZFI,NSFSZFI_LABEL,PAYANN,RACE_GROUP,RACE_GROUP_LABEL,RCPPDEMP,SEX,SEX_LABEL,TECHUSE,TECHUSE_LABEL&for=state:* \n",
       "\n",
       "If the operation fails, click the link to see the error.\n",
       "https://api.census.gov/data/2018/abscbo?get=NAME,GEO_ID,NAICS2017,NAICS2017_LABEL,OWNCHAR,OWNCHAR_LABEL,OWNPDEMP,QDESC,QDESC_LABEL,OWNER_RACE,OWNER_RACE_LABEL,OWNER_SEX,OWNER_SEX_LABEL&for=state:*&OWNCHAR=CG&NAICS2017=00&QDESC=O02 \n",
@@ -1484,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 59,
    "id": "a1bfdc01-d8e7-46c6-ab2b-77ca924c8598",
    "metadata": {},
    "outputs": [],
@@ -1503,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 60,
    "id": "3e313959-08d8-4272-bd5b-d20d7b744be3",
    "metadata": {},
    "outputs": [],
@@ -1544,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 61,
    "id": "14a99328-662e-4daa-9995-fb54c457c978",
    "metadata": {},
    "outputs": [
@@ -1557,7 +1578,7 @@
       "Displaying column value counts where there are fewer than 10 unique values in the column.\n",
       "\n",
       "---  DataFrame: comp_sum_df ---------------------\n",
-      "Columns: name, emp, firmpdemp, geo_id, industry_code, industry, payann, race_group_label, gender, yibszfi_label, state\n",
+      "Columns: name, emp, firmpdemp, geo_id, industry_code, industry, payann, race_group_label, rcppdemp, gender, yibszfi_label, state\n",
       "Total                                         27311\n",
       "White                                         11327\n",
       "Nonminority                                   11320\n",
@@ -1568,6 +1589,9 @@
       "American Indian and Alaska Native              4509\n",
       "Native Hawaiian and Other Pacific Islander     2126\n",
       "Name: race_group_label, dtype: int64\n",
+      "\n",
+      "0    86192\n",
+      "Name: rcppdemp, dtype: int64\n",
       "\n",
       "Total                  44001\n",
       "Male                   15588\n",
@@ -1592,7 +1616,7 @@
       "Displaying column value counts where there are fewer than 10 unique values in the column.\n",
       "\n",
       "---  DataFrame: bus_char_df ---------------------\n",
-      "Columns: name, buschar_label, emp, firmpdemp, geo_id, industry_code, industry, payann, qdesc_label, race_group_label, gender, yibszfi_label, state\n",
+      "Columns: name, buschar_label, emp, firmpdemp, geo_id, industry_code, industry, payann, qdesc_label, race_group_label, rcppdemp, gender, yibszfi_label, state\n",
       "0    2295\n",
       "Name: industry_code, dtype: int64\n",
       "\n",
@@ -1609,6 +1633,9 @@
       "\n",
       "Total    2295\n",
       "Name: race_group_label, dtype: int64\n",
+      "\n",
+      "0    2295\n",
+      "Name: rcppdemp, dtype: int64\n",
       "\n",
       "Total    2295\n",
       "Name: gender, dtype: int64\n",
@@ -1665,7 +1692,7 @@
       "Displaying column value counts where there are fewer than 10 unique values in the column.\n",
       "\n",
       "---  DataFrame: bus_tech_df ---------------------\n",
-      "Columns: name, emp, firmpdemp, geo_id, industry_code, industry, nsfszfi, nsfszfi_label, payann, race_group_label, gender, techuse, techuse_label, state\n",
+      "Columns: name, emp, firmpdemp, geo_id, industry_code, industry, nsfszfi, nsfszfi_label, payann, race_group_label, rcppdemp, gender, techuse, techuse_label, state\n",
       "1    42840\n",
       "Name: nsfszfi, dtype: int64\n",
       "\n",
@@ -1674,6 +1701,9 @@
       "\n",
       "Total    42840\n",
       "Name: race_group_label, dtype: int64\n",
+      "\n",
+      "0    42840\n",
+      "Name: rcppdemp, dtype: int64\n",
       "\n",
       "Total    42840\n",
       "Name: gender, dtype: int64\n",
