--- a/jeds_visualizations.ipynb
+++ b/jeds_visualizations.ipynb
@@ -376,7 +376,7 @@
     "    if len(diffs) > 0:\n",
     "        print('There are some states missing.')\n",
     "    return grouped, target, label\n",
-    "grouped, target, label = clean_for_map(comp_sum_df, 'gender')"
+    "grouped, target, label = clean_for_map(comp_sum_df, 'gender') # can change gender to other options or leave blank for default as industry"
    ]
   },
   {
