--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -30,14 +30,32 @@
     "- In this portion, we will dicuss the problems or questions that we are trying to solve or answer. \n",
     "    We will identify the sources of our data and describe why the data needs to be transformed.\n",
     "    \n",
+    "> The United States Census Bureau provides access to an extensive database with hundreds of datasets that detail national <br>\n",
+    "  characteristics. The data is stored in a way that can be quite confusing to many people, but there are many resources to <br>\n",
+    "  assist interested researchers with gleaning new insights from the data.\n",
+    "  \n",
+    "> For this study, we looked specifically at the Annual Business Survey for 2018. This survey provides information on a variety of<br>\n",
+    "  characteristics for businesses and business owners.\n",
+    "  \n",
+    "> **These are the questions that we are interested in answering:**<br>\n",
+    ">> 1. When considering the Finance and Insurance Industries as well as the Education Industry, what are the reasons that a owner <br>\n",
+    "      was motivated to create the business?\n",
+    "      \n",
+    ">> 2. When considering the highest average pay for each state, are there any noticeable trends when accounting for the Industry, <br>\n",
+    "      the Race of the Owner, or the Gender of the Owner?\n",
+    "      \n",
+    ">> 3. Does the rate of utilizing technology solutions have any correlation with family ownership status?\n",
+    "\n",
+    ">> 4. What industries are most and least likely to utilize tech solutions in their business?\n",
+    "    \n",
+    "    \n",
     "#### Data Sources\n",
     "\n",
     "- In this portion we will be more specific about where we found the data, when we accessed it, and we will cite any sources.\n",
     "\n",
     "\n",
-    "US Census Bureau. (2021b, October 14). *Annual Business Survey (ABS) APIs.* Census.Gov.\n",
-    "\n",
-    "Retrieved April 22, 2022, from https://www.census.gov/data/developers/data-sets/abs.2019.html\n",
+    ">US Census Bureau. (2021b, October 14). *Annual Business Survey (ABS) APIs.* Census.Gov.<br>\n",
+    ">Retrieved April 22, 2022, from https://www.census.gov/data/developers/data-sets/abs.2019.html\n",
     "\n",
     "#### Extraction\n",
     "\n",
