--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -48,7 +48,12 @@
     "\n",
     ">> 4. What industries are most and least likely to utilize tech solutions in their business?\n",
     "    \n",
-    "    \n",
+    ">> Other Questions\n",
+    "\n",
+    "> As mentioned previously, the data is stored in a way that can be quite confusing, and it is necessary to perform a variety of<br>\n",
+    "  transformations on it before it can be utilized. Some things to keep in mind is that there are multiple series of \"total\" categories,<br>\n",
+    "  multiple variables stored in a single column, and the call to the API must contain every needed variable, as well as supporting variables<br>\n",
+    "  in order to get complete and accurate results.\n",
     "#### Data Sources\n",
     "\n",
     "- In this portion we will be more specific about where we found the data, when we accessed it, and we will cite any sources.\n",
