--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -353,7 +353,7 @@
     "    for item in target_subset[(target_subset[label] != \"-\")].Name.tolist():\n",
     "        variable_list.append(item)\n",
     "        variable_list.append(f'{item}_LABEL')\n",
-    "    variable_list = [_ for _ in variable_list if _ not in no_label]#, 'QDESC_LABEL']]\n",
+    "    variable_list = [_ for _ in variable_list if _ not in no_label]\n",
     "    in_table = \"NAME,\" + \",\".join(variable_list)\n",
     "    variable_dict[i] = in_table"
    ]
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "dd0aff64-c246-4223-b3d0-b6c5d2f9438e",
    "metadata": {},
    "outputs": [],
@@ -1066,9 +1066,113 @@
     "\n",
     "# For example. \n",
     "\n",
-    "def jeds_visuals(needed_data_frames):\n",
-    "    # muddy_code\n",
-    "    pass\n"
+    "def jeds_visuals():\n",
+    "    today = dt.datetime.strftime(dt.datetime.today().date(), '%b %d, %Y')\n",
+    "    state_code_path = 'https://raw.githubusercontent.com/jedc4xer/abs_group_assessment/main/data/state_codes.csv'\n",
+    "    state_codes = pd.read_csv(state_code_path)\n",
+    "    \n",
+    "    def clean_for_map(df, target = 'industry'):\n",
+    "        if target not in ['gender','race_group_label','industry']:\n",
+    "            possible = \", \".join(['gender','race_group_label','industry'])\n",
+    "            print(f'You must choose one of: {possible}')\n",
+    "            return\n",
+    "        label = {'gender': 'Owner Gender','race_group_label': 'Owner Race','industry':'Industry'}[target]\n",
+    "\n",
+    "        subset = df[(df.payann != 0) & (df.gender != 'Total') & (df.race_group_label != 'Total') & (df.industry_code != '00')]\n",
+    "        subset = subset[['name','geo_id',target,'payann','firmpdemp','emp']]\n",
+    "        subset['payann'] = subset['payann'] * 1000\n",
+    "        subset['avg_pay'] = subset.apply(lambda row: row.payann/row.emp, axis = 1)\n",
+    "\n",
+    "        subset_agg = subset.groupby(\n",
+    "            by = ['name']\n",
+    "                )[['avg_pay']].agg(max_pay = ('avg_pay','max'))\n",
+    "\n",
+    "        subset_agg.reset_index(inplace = True)\n",
+    "\n",
+    "        grouped = pd.merge(subset, subset_agg, left_on = 'name', right_on = 'name', how = 'left')\n",
+    "\n",
+    "        grouped = grouped[(grouped.avg_pay == grouped.max_pay)].reset_index(drop = True)\n",
+    "        grouped = grouped.sort_values(by = 'name').reset_index(drop = True)\n",
+    "        grouped = grouped.drop_duplicates().reset_index(drop = True)\n",
+    "\n",
+    "        grouped = pd.merge(grouped,state_codes, left_on = 'name', right_on = 'State', how = 'left')\n",
+    "\n",
+    "        grouped = grouped[['name',target,'avg_pay','Postal Abbr.']]\n",
+    "\n",
+    "        diffs = set(subset_agg.name.tolist()) - set(grouped.name.tolist())\n",
+    "        if len(diffs) > 0:\n",
+    "            print('There are some states missing.')\n",
+    "        return grouped, target, label\n",
+    "    \n",
+    "    def plot_maps(grouped, target):\n",
+    "        grouped, target, label = clean_for_map(grouped, target)\n",
+    "\n",
+    "        if target == 'gender':\n",
+    "            color_scheme = px.colors.qualitative.Plotly[2:]\n",
+    "        else:\n",
+    "            color_scheme = px.colors.qualitative.Bold\n",
+    "\n",
+    "        customdata = np.stack((grouped['name'],grouped[target]),axis = -1)\n",
+    "\n",
+    "        mapfig = px.choropleth(grouped, \n",
+    "                               title = f'Highest Average Pay based on {label}',\n",
+    "                               locations = 'Postal Abbr.',\n",
+    "                               locationmode = \"USA-states\",\n",
+    "                               scope = 'usa',\n",
+    "                               color = target,\n",
+    "                               hover_data = ['name',target,'avg_pay'],\n",
+    "                               color_discrete_sequence = color_scheme,\n",
+    "                               height = 600,\n",
+    "                               width = 1300,\n",
+    "                               )\n",
+    "\n",
+    "        mapfig.add_annotation(\n",
+    "            text = (f\"Created by: Jed Dryer<br>{today}<br>Source: US Census - 2019 ABS\"),\n",
+    "            showarrow=False,\n",
+    "            x = .54,\n",
+    "            y = .01,\n",
+    "            xref='paper',\n",
+    "            yref='paper' ,\n",
+    "            xanchor='left',\n",
+    "            yanchor='bottom',\n",
+    "            xshift=-1,\n",
+    "            yshift=-3,\n",
+    "            font=dict(size=10, color=\"grey\"),\n",
+    "            align=\"right\",\n",
+    "            )\n",
+    "\n",
+    "        mapfig.update_layout(margin={\"r\":3,\"t\":30,\"l\":0,\"b\":10}, dragmode = False)\n",
+    "        mapfig.update_layout(title_y = 0.95, title_x = 0.25, title_font_size = 18,\n",
+    "                            legend = dict(x=0.9,y=0.6))\n",
+    "        mapfig.update_traces(hovertemplate = '<b>State: %{customdata[0]}</b><br>Value: %{customdata[1]}')\n",
+    "        mapfig.update_geos(resolution=50,showlakes=True, lakecolor=\"Lightblue\", subunitcolor = 'black')\n",
+    "        #save_label = \"\".join(_.lower() for _ in label if _.isalpha())\n",
+    "        #mapfig.write_html(f'highest_avg_pay_{save_label}.html')\n",
+    "        #mapfig.show()\n",
+    "        return mapfig\n",
+    "\n",
+    "    reasons = ['gender','race_group_label','industry']\n",
+    "    maps = []\n",
+    "    for reason in reasons:\n",
+    "        maps.append(plot_maps(comp_sum_df, reason))\n",
+    "\n",
+    "    with open('company_pay_maps.html', 'w') as mapfile:\n",
+    "        for fig in maps:\n",
+    "            mapfile.write(fig.to_html(full_html = False, include_plotlyjs='cdn'))\n",
+    "        mapfile.close()\n",
+    "\n",
+    "# run my visual function and pass in the dataframe\n",
+    "jeds_visuals() # <--- This is the code to create my visuals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9052b70e-6bb8-41be-aaae-0f0f5e0e0460",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jeds_visuals(data)"
    ]
   },
   {
@@ -1084,7 +1188,11 @@
     "\n",
     "def jeds_visuals(needed_data_frames):\n",
     "    # muddy_code\n",
-    "    pass\n"
+    "    \n",
+    "    \n",
+    "    pass\n",
+    "\n",
+    "jeds_visuals(comp_sum_df, slbo, )"
    ]
   },
   {
