--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -1160,19 +1160,11 @@
     "        for fig in maps:\n",
     "            mapfile.write(fig.to_html(full_html = False, include_plotlyjs='cdn'))\n",
     "        mapfile.close()\n",
+    "    \n",
+    "    print(\"Jed's Visuals Successfully Exported to HTML\")\n",
     "\n",
     "# run my visual function and pass in the dataframe\n",
     "jeds_visuals() # <--- This is the code to create my visuals"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9052b70e-6bb8-41be-aaae-0f0f5e0e0460",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jeds_visuals(data)"
    ]
   },
   {
