--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "1914358d-d530-473c-ad52-840458c04189",
    "metadata": {
     "tags": []
@@ -393,6 +393,9 @@
       "\n",
       "If the operation fails, click the link to see the error.\n",
       "https://api.census.gov/data/2018/abscbo?get=NAME,GEO_ID,NAICS2017,NAICS2017_LABEL,OWNCHAR,OWNCHAR_LABEL,OWNER_RACE,OWNER_RACE_LABEL,OWNER_SEX,OWNER_SEX_LABEL,OWNPDEMP,QDESC,QDESC_LABEL&for=state:*&OWNCHAR=CG&NAICS2017=00&QDESC=O02 \n",
+      "\n",
+      "If the operation fails, click the link to see the error.\n",
+      "https://api.census.gov/data/2018/abscs?get=NAME,EMP,FIRMPDEMP,GEO_ID,NAICS2017,NAICS2017_LABEL,PAYANN,RACE_GROUP,RACE_GROUP_LABEL,RCPPDEMP,SEX,SEX_LABEL,YIBSZFI,YIBSZFI_LABEL,FIRMPDEMP&for=us:* \n",
       "\n"
      ]
     }
@@ -403,7 +406,8 @@
     "    f'https://api.census.gov/data/2018/abscb?get={variable_dict[1]}&for=state:*',\n",
     "    f'https://api.census.gov/data/2018/abscbo?get={variable_dict[2]}&for=us:*&for=QDESC_LABEL=YRACQBUS',\n",
     "    f'https://api.census.gov/data/2018/abstcb?get={variable_dict[3]}&for=state:*',\n",
-    "    f'https://api.census.gov/data/2018/abscbo?get={variable_dict[2]}&for=state:*&OWNCHAR=CG&NAICS2017=00&QDESC=O02'\n",
+    "    f'https://api.census.gov/data/2018/abscbo?get={variable_dict[2]}&for=state:*&OWNCHAR=CG&NAICS2017=00&QDESC=O02',\n",
+    "    f'https://api.census.gov/data/2018/abscs?get={variable_dict[0]},FIRMPDEMP&for=us:*'  #JAKE ADDED THIS\n",
     "]\n",
     "\n",
     "def get_data_frame(url):\n",
@@ -415,7 +419,8 @@
     "bus_char_df = get_data_frame(links[1]) # Business Characteristics\n",
     "bus_own_df = get_data_frame(links[2]) # Business Owners (National Level)\n",
     "bus_tech_df = get_data_frame(links[3]) # Business Tech   \n",
-    "slbo = get_data_frame(links[4]) # Business Owners (State Level)"
+    "slbo = get_data_frame(links[4]) # Business Owners (State Level)\n",
+    "comp_sum_natl_df = get_data_frame(links[5]) #Company Summary National   JAKE ADDED THIS"
    ]
   },
   {
@@ -425,8 +430,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_collection = [comp_sum_df, bus_char_df, bus_own_df, bus_tech_df, slbo]    \n",
-    "df_names = ['comp_sum_df', 'bus_char_df', 'bus_own_df', 'bus_tech_df','slbo']   "
+    "df_collection = [comp_sum_df, bus_char_df, bus_own_df, bus_tech_df, slbo, comp_sum_natl_df]      #JAKE ADDED TO THIS LIST\n",
+    "df_names = ['comp_sum_df', 'bus_char_df', 'bus_own_df', 'bus_tech_df','slbo', 'comp_sum_natl_df']   "
    ]
   },
   {
@@ -758,6 +763,88 @@
       "\n",
       "############# END OF DATAFRAME INFO ################\n",
       "\n",
+      "\n",
+      "\n",
+      "############# NEW DATAFRAME ################\n",
+      "Displaying column value counts where there are fewer than 10 unique values in the column.\n",
+      "\n",
+      "---  DataFrame: comp_sum_natl_df ---------------------\n",
+      "Columns: name, emp, firmpdemp, geo_id, industry_code, industry, payann, race_group_label, rcppdemp, gender, yibszfi_label, firmpdemp.1\n",
+      "\n",
+      "00       252\n",
+      "54       251\n",
+      "31-33    247\n",
+      "23       246\n",
+      "48-49    246\n",
+      "62       246\n",
+      "56       245\n",
+      "72       245\n",
+      "44-45    244\n",
+      "42       241\n",
+      "81       240\n",
+      "53       238\n",
+      "51       237\n",
+      "52       236\n",
+      "71       227\n",
+      "61       215\n",
+      "99       211\n",
+      "21       207\n",
+      "11       193\n",
+      "55       188\n",
+      "22       168\n",
+      "Name: industry_code, dtype: int64\n",
+      "\n",
+      "Total for all sectors                                                       252\n",
+      "Professional, scientific, and technical services                            251\n",
+      "Manufacturing                                                               247\n",
+      "Construction                                                                246\n",
+      "Transportation and warehousing                                              246\n",
+      "Health care and social assistance                                           246\n",
+      "Administrative and support and waste management and remediation services    245\n",
+      "Accommodation and food services                                             245\n",
+      "Retail trade                                                                244\n",
+      "Wholesale trade                                                             241\n",
+      "Other services (except public administration)                               240\n",
+      "Real estate and rental and leasing                                          238\n",
+      "Information                                                                 237\n",
+      "Finance and insurance                                                       236\n",
+      "Arts, entertainment, and recreation                                         227\n",
+      "Educational services                                                        215\n",
+      "Industries not classified                                                   211\n",
+      "Mining, quarrying, and oil and gas extraction                               207\n",
+      "Agriculture, forestry, fishing and hunting                                  193\n",
+      "Management of companies and enterprises                                     188\n",
+      "Utilities                                                                   168\n",
+      "Name: industry, dtype: int64\n",
+      "\n",
+      "Total                                         588\n",
+      "White                                         588\n",
+      "Nonminority                                   588\n",
+      "Minority                                      581\n",
+      "Asian                                         551\n",
+      "Black or African American                     528\n",
+      "Equally minority/nonminority                  520\n",
+      "American Indian and Alaska Native             487\n",
+      "Native Hawaiian and Other Pacific Islander    392\n",
+      "Name: race_group_label, dtype: int64\n",
+      "\n",
+      "Total                  1286\n",
+      "Male                   1263\n",
+      "Female                 1179\n",
+      "Equally male/female    1095\n",
+      "Name: gender, dtype: int64\n",
+      "\n",
+      "All firms                                   736\n",
+      "Firms with 16 or more years in business     696\n",
+      "Firms with less than 2 years in business    692\n",
+      "Firms with 6 to 10 years in business        683\n",
+      "Firms with 11 to 15 years in business       676\n",
+      "Firms with 2 to 3 years in business         670\n",
+      "Firms with 4 to 5 years in business         670\n",
+      "Name: yibszfi_label, dtype: int64\n",
+      "\n",
+      "############# END OF DATAFRAME INFO ################\n",
+      "\n",
       "\n"
      ]
     }
@@ -1057,10 +1144,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "dd0aff64-c246-4223-b3d0-b6c5d2f9438e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jed's Visuals Successfully Exported to HTML\n"
+     ]
+    }
+   ],
    "source": [
     "# I suggest wrapping your entire visualization process in a function while we work on integrating. \n",
     "\n",
@@ -1169,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "76546f2a-b56e-4dac-9c73-f421f5f1217a",
    "metadata": {},
    "outputs": [],
@@ -1182,14 +1277,12 @@
     "    # muddy_code\n",
     "    \n",
     "    \n",
-    "    pass\n",
-    "\n",
-    "jeds_visuals(comp_sum_df, slbo, )"
+    "    pass\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "c8dfb738-f89b-42be-933c-44f03a29d3f9",
    "metadata": {},
    "outputs": [],
@@ -1205,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "783f98ed-737f-444a-8a91-0fae8d45b384",
    "metadata": {},
    "outputs": [],
@@ -1214,50 +1307,18 @@
     "\n",
     "# For example. \n",
     "\n",
-    "def Marjea_visuals(needed_data_frames):\n",
-#df_bus_own = df_collection[2]
-#df_bus_own[df_bus_own['industry']!='Total for all sectors']
-#df_bus_own = df_bus_own[df_bus_own['gender']!='All owners of respondent firms']
-#x = df_bus_own[['qdesc_label','gender','geo_id']].groupby(['qdesc_label','gender']).count()
-#x = x.reset_index()
-#x.columns = ['qdesc_label', 'gender', 'count']
-
-#plt.figure(figsize=(20, 10))
-
-#ax = sns.barplot(data = x, x = 'qdesc_label', y = 'count', hue = 'gender',palette = 'Oranges')
-#ax.set(xlabel ="Question Codes", ylabel = "number of reponses", title ='Number of Responses to Question by Business owner')
-#plt.legend(title = "Gender", fontsize = 'large', title_fontsize = 20, loc = 2, bbox_to_anchor = (1,1))
-#plt.xticks(rotation = 70)
-#plt.show()
-
-
-#x = x.groupby('qdesc_label')['count'].sum().reset_index()
-#plt.figure(figsize=(20, 10))
-#plt.pie(x['count'], labels=x['qdesc_label'], autopct='%1.0f%%', pctdistance = 1.1, labeldistance = 1.2)
-#plt.legend(title = "", fontsize = 'medium', title_fontsize = 10, loc = 3, bbox_to_anchor = (2,0))
-#plt.title('Percentage of Business Owner Responses')
-#plt.show()
-
-
-#x = df_bus_own[['owner_race_label','gender','geo_id']].groupby(['owner_race_label','gender']).count().reset_index()
-
-#plt.figure(figsize=(20, 10))
-
-#sns.set(font_scale=2)
-
-#ax = sns.barplot(data = x, x = 'owner_race_label', y = 'geo_id', hue = 'gender', palette = 'Oranges')
-#ax.set_xlabel("Race of Business Owner", fontsize = 30)
-#ax.set_ylabel("Number of Business Owner", fontsize = 30)
-#ax.set_title("Number of Business Owner by Race", fontsize = 40)
-
-#plt.legend(title = "Gender", fontsize = 'large', title_fontsize = 20, loc = 2, bbox_to_anchor = (1,1))
-
-#plt.xticks(rotation = 70)
-#plt.show()
-
+    "def jeds_visuals(needed_data_frames):\n",
     "    # muddy_code\n",
-    "    pass\n"
+    "    pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9856b3c1-5cfe-4e71-aa4b-e066784b6e93",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
