Complete jakes_visuals()

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "76546f2a-b56e-4dac-9c73-f421f5f1217a",
    "metadata": {},
    "outputs": [],
@@ -1282,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "c8dfb738-f89b-42be-933c-44f03a29d3f9",
    "metadata": {},
    "outputs": [],
@@ -1298,17 +1298,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "783f98ed-737f-444a-8a91-0fae8d45b384",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# I suggest wrapping your entire visualization process in a function while we work on integrating. \n",
-    "\n",
-    "# For example. \n",
-    "\n",
-    "def jeds_visuals(needed_data_frames):\n",
-    "    # muddy_code\n",
+    "def jakes_visuals():\n",
+    "    #Visual 1: National Firms by Industry and Gender\n",
+    "    \n",
+    "    workingDF = df_collection[5].copy()\n",
+    "    \n",
+    "    #I filtered values to look at number of firms by industries, broken down by gender.\n",
+    "    #To do this I had to filter to look at 'Total' values for race groups and time the firm was open\n",
+    "    workingDF = workingDF[workingDF['firmpdemp'] != 0]\n",
+    "    workingDF = workingDF[workingDF['yibszfi_label'] == 'All firms']\n",
+    "    workingDF = workingDF[workingDF['race_group_label'] == 'Total']\n",
+    "    workingDF = workingDF[workingDF['industry'] != 'Industries not classified']\n",
+    "    workingDF = workingDF[workingDF['gender'] != 'Total']\n",
+    "    workingDF = workingDF[workingDF['industry'] != 'Total for all sectors']\n",
+    "    \n",
+    "    #After filtering, unneeded columns are dropped\n",
+    "    workingDF.drop(['geo_id', 'name', 'industry_code', 'race_group_label', 'yibszfi_label'], axis = 1, inplace = True)\n",
+    "    workingDF = workingDF.sort_values(by = 'firmpdemp', ascending = False)\n",
+    "    \n",
+    "    #This creates labels for the visual. I generated them separate from the visual so I could add a word-wrap\n",
+    "    labels = workingDF['industry'].unique()\n",
+    "    labels = [ '\\n'.join(wrap(l, 30)) for l in labels ]\n",
+    "    \n",
+    "    #Making the plot\n",
+    "    plt.figure(figsize=(15, 20))\n",
+    "    ax = sns.barplot(data = workingDF, y = 'industry', x = 'firmpdemp', hue = 'gender')\n",
+    "    ax.set(xlabel =\"Number of Firms\", ylabel = \"Industry\", title ='Majority Ownership of US Firms by Industry and Gender')\n",
+    "    ax.set_yticklabels(labels)\n",
+    "    plt.show()\n",
+    "    \n",
+    "    #Visual 2: National Firms by Industry and Minority Status\n",
+    "    workingDF3 = df_collection[5].copy()\n",
+    "    \n",
+    "    #Filtering values to for firm age and gender, here I'm only interested in minority status and industry\n",
+    "    workingDF3 = workingDF3[workingDF3['firmpdemp'] != 0]\n",
+    "    workingDF3 = workingDF3[workingDF3['yibszfi_label'] == 'All firms']\n",
+    "    workingDF3 = workingDF3[workingDF3['gender'] == 'Total']\n",
+    "    workingDF3 = workingDF3[workingDF3['industry'] != 'Industries not classified']\n",
+    "    workingDF3 = workingDF3.query('race_group_label  in (\"Nonminority\", \"Minority\")')\n",
+    "    workingDF3 = workingDF3[workingDF3['industry'] != 'Total for all sectors']\n",
+    "    \n",
+    "    #Dropping unneeded columns after using them to filter\n",
+    "    workingDF3.drop(['geo_id', 'name', 'industry_code', 'gender', 'yibszfi_label'], axis = 1, inplace = True)\n",
+    "    workingDF3 = workingDF3.sort_values(by = 'firmpdemp', ascending = False)\n",
+    "    \n",
+    "    #Generating labels for the plot and using word wrap\n",
+    "    labels3 = workingDF3['industry'].unique()\n",
+    "    labels3 = [ '\\n'.join(wrap(l, 30)) for l in labels ]\n",
+    "    \n",
+    "    #Making the plot\n",
+    "    plt.figure(figsize=(15, 15))\n",
+    "    ax3 = sns.barplot(data = workingDF3, y = 'industry', x = 'firmpdemp', hue = 'race_group_label')\n",
+    "    ax3.set_yticklabels(labels3)\n",
+    "    ax3.set(xlabel =\"Number of Firms\", ylabel = \"Industry\", title ='Majority Ownership of US Firms by Industry and Minority Status')\n",
+    "    plt.legend(loc = 'lower right')\n",
+    "    plt.show()\n",
+    "    \n",
+    "    \n",
+    "    #Visual 3: Ratio of Gender Ownership by State for Construction\n",
+    "    state_df = df_collection[0].copy()\n",
+    "    \n",
+    "    #Filtering columns to control for firm age and race group, \n",
+    "    #I'm looking at difference in firm ownership by gender and state for the construction industry\n",
+    "    state_df = state_df[state_df['industry'] == 'Construction']\n",
+    "    state_df = state_df[state_df['gender'] != 'Total']\n",
+    "    state_df = state_df[state_df['gender'] != 'Equally male/female']\n",
+    "    state_df = state_df[state_df['race_group_label'] == 'Total']\n",
+    "    state_df = state_df[state_df['yibszfi_label'] == 'All firms']\n",
+    "    \n",
+    "    #Dropping unneeded columns\n",
+    "    state_df.drop(['geo_id','industry', 'race_group_label','yibszfi_label', 'state', 'emp', 'industry_code', 'payann', 'rcppdemp'], axis = 1, inplace=True)\n",
+    "    state_df.sort_values('name', inplace=True)\n",
+    "    \n",
+    "    #I'm breaking the gender column into 2 separate dataframes\n",
+    "    male_df = state_df[state_df['gender'] == 'Male'].copy()\n",
+    "    female_df = state_df[state_df['gender'] == 'Female'].copy()\n",
+    "    male_df.reset_index(inplace=True)\n",
+    "    female_df.reset_index(inplace=True)\n",
+    "    \n",
+    "    #Making a new dataframe with columns for #male-owned firms and #female-owned firms\n",
+    "    newdf = male_df.copy()\n",
+    "    newdf.drop('gender', axis = 1, inplace=True)\n",
+    "    female_df.drop('gender', axis = 1, inplace=True)\n",
+    "    newdf.rename(columns = {'firmpdemp':'Male'}, inplace = True)\n",
+    "    female_df.rename(columns = {'firmpdemp':'Female'}, inplace = True)\n",
+    "    \n",
+    "    #Adding the female-owned firms column\n",
+    "    newdf = newdf.merge(female_df, on = 'name')\n",
+    "    newdf = newdf[newdf['Male'] != 0]\n",
+    "    \n",
+    "    #Generating a new column to find the ratio of female-owned firms to male-owned firms\n",
+    "    newdf = newdf.assign(RatioFemaleToMale=lambda y: (y['Female'] / y['Male']))\n",
+    "    newdf.sort_values('RatioFemaleToMale', ascending = False, inplace = True)\n",
+    "    \n",
+    "    #Drop unneeded columns\n",
+    "    newdf.drop(['Male', 'Female'], axis = 1, inplace = True)\n",
+    "    newdf = newdf.head(16)\n",
+    "    \n",
+    "    #Making the plot\n",
+    "    plt.figure(figsize=(15, 5))\n",
+    "    ax4 = sns.barplot(data = newdf, y = 'name', x = 'RatioFemaleToMale', color = 'orange')\n",
+    "    ax4.set(xlabel =\"Ratio of Female Owned Firms to Male Owned Firms\", \n",
+    "    ylabel = \"State\", title ='Majority Ownership of US Firms by Gender and State')\n",
+    "    plt.show()\n",
     "    pass"
    ]
   },
@@ -1316,6 +1413,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9856b3c1-5cfe-4e71-aa4b-e066784b6e93",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "877e471c-5968-4edd-ab33-9f69c573ca80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8115459-a182-422d-b007-c21ec18e5604",
    "metadata": {},
    "outputs": [],
    "source": []
